# transaction_chain_proof

./: ADAPTER_USER_AGREEMENT.txt  Cargo.toml  LICENSE.txt  README.md
src/: error.rs  lib.rs
src/data_structures/: messages.rs  mod.rs  witnesses.rs
src/predicates/: mod.rs  tcp.rs  universal_tcp.rs
src/snarks/: mod.rs  tcp_snark.rs  universal_tcp_snark.rs
