[package]
name = "transaction_chain_proof"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-crypto-primitives = {version = "0.3.0", features = ["r1cs"]}
ark-ff = "0.3.0"
ark-groth16 = "0.3.0"
ark-mnt4-298 = "0.3.0"
ark-mnt6-298 = "0.3.0"
ark-pcd = { git = "https://github.com/BarbacoviF/pcd.git", branch = "barbacovif/use-short-weierstrass-curve", version = "0.1.0" }
ark-r1cs-std = "0.3.0"
ark-relations = "0.3.0"
bitcoin_r1cs = { git = "https://github.com/nchain-innovation/bitcoin_r1cs.git", branch = "ark-3.0"}
chain_gang = { git = "https://github.com/nchain-innovation/chain-gang.git", tag = "v0.6.15", package = "chain-gang"}
hex = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"


ark-mnt4-753 = {version = "0.3.0", features = ["r1cs"]}
ark-mnt6-753 = {version = "0.3.0", features = ["r1cs"]}
ark-std = "0.3.0"
